Fixing the "jump" when an input is selected. Changing border to transparent and outline will be the "border". All this in "input.css"

--- a/styles/fields/input.css
+++ b/styles/fields/input.css
@@ -4,7 +4,8 @@ textarea {
   appearance: none;
   width: 100%;
   border-radius: .5rem;
-  border: 1px solid var(--stroke-default);
+  border: 2px solid transparent;
+  outline: 1px solid var(--stroke-default);
   padding: .75rem 1rem;
   font-family: var(--font-family);
 }
